[package]
name = "plato-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance PLATO tile engine — Rust replacement for Python PLATO server core"

[[bin]]
name = "plato-engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
rayon = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1"
anyhow = "1"
chrono = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_gate"
harness = false
