[package]
name = "plato-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance PLATO tile engine — Rust replacement for the Python PLATO server core"
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/plato-engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
